plugins {
	id 'net.fabricmc.fabric-loom-remap' version "${loom_version}"
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

repositories {
	// Loom adds the essential maven repositories to download Minecraft and
	// libraries from automatically; Maven Central is declared for the JUnit 5
	// test dependencies below (and would serve any future runtime library).
	mavenCentral()
}

loom {
	splitEnvironmentSourceSets()

	mods {
		"beamcraft" {
			sourceSet sourceSets.main
			sourceSet sourceSets.client
		}
	}

}

fabricApi {
	configureDataGeneration {
		client = true
	}
}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	// Fabric API. This is technically optional, but you probably want it anyway.
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"

	// 引入 LWJGL 3 的 Assimp 绑定与当前平台的本地库
	implementation "org.lwjgl:lwjgl-assimp:3.3.3"
	include "org.lwjgl:lwjgl-assimp:3.3.3"
	include "org.lwjgl:lwjgl-assimp:3.3.3:natives-windows"
	runtimeOnly "org.lwjgl:lwjgl-assimp:3.3.3:natives-windows"
	runtimeOnly "org.lwjgl:lwjgl-assimp:3.3.3:natives-linux"
	runtimeOnly "org.lwjgl:lwjgl-assimp:3.3.3:natives-macos"

	// TODO: 如果想把核心类库直接打包进 Mod 中，可以使用 include (根据打包策略)
	// include "org.lwjgl:lwjgl-assimp:3.3.3"

	// JUnit 5 for the texture decode/cache unit tests (src/test/java).
	// The decode layer itself has no third-party dependencies.
	testImplementation "org.junit.jupiter:junit-jupiter:5.10.2"
	testRuntimeOnly "org.junit.platform:junit-platform-launcher"
}

test {
	useJUnitPlatform()
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": inputs.properties.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 21
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

jar {
	inputs.property "projectName", project.name

	from("LICENSE") {
		rename { "${it}_${project.name}"}
	}
}

// configure the maven publication
publishing {
	publications {
		create("mavenJava", MavenPublication) {
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}
